--- a/Automatic-Admission-Process.ipynb
+++ b/Automatic-Admission-Process.ipynb
@@ -4,11 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PSC_SESSIONAL_EXAM_ASSIGNMENT\n",
-    "# NAME : DIVY D. CHAVDA\n",
-    "# Roll No : 19BCE505\n",
-    "# Semester : 4th\n",
-    "# Division : A"
+    "# Automatic-Admission-Process\n",
+    "# NAME : DIVY D. CHAVDA\n"
    ]
   },
   {
